--- a/chofer-sobrio/package.json
+++ b/chofer-sobrio/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "firebase": "^6.0.2",
+    "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-calendar": "^2.19.0",
