--- a/chofer-sobrio/package.json
+++ b/chofer-sobrio/package.json
@@ -11,6 +11,8 @@
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
+    "react-redux": "^7.0.3",
+    "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
