--- a/chofer-sobrio/package.json
+++ b/chofer-sobrio/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-calendar": "^2.19.0",
+    "react-confirm-alert": "^2.4.1",
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
