--- a/chofer-sobrio/package.json
+++ b/chofer-sobrio/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-sidebar": "^3.0.2",
+    "react-table": "^6.10.0",
     "react-time-picker": "^3.5.2",
     "reactstrap": "^8.0.0",
     "semantic-ui-react": "^0.87.1",
