--- a/chofer-sobrio/package.json
+++ b/chofer-sobrio/package.json
@@ -13,6 +13,7 @@
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
+    "react-icons": "^3.7.0",
     "react-moment": "^0.9.2",
     "react-redux": "^7.0.3",
     "react-redux-firebase": "^2.2.6",
