--- a/chofer-sobrio/package.json
+++ b/chofer-sobrio/package.json
@@ -12,6 +12,7 @@
     "react-confirm-alert": "^2.4.1",
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
+    "react-file-base64": "^1.0.3",
     "react-firebaseui": "^3.1.2",
     "react-icons": "^3.7.0",
     "react-moment": "^0.9.2",
