--- a/chofer-sobrio/package.json
+++ b/chofer-sobrio/package.json
@@ -26,7 +26,8 @@
     "reactstrap": "^8.0.0",
     "semantic-ui-react": "^0.87.1",
     "styled-components": "^4.2.1",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "sweetalert-react": "^0.4.11"
   },
   "scripts": {
     "start": "react-scripts start",
